[package]
name = "advent-of-code-2019"
version = "0.1.0"
authors = ["George Marshall <george@georgemarshall.name>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[dependencies]
aoc-runner = "0.2.2"
aoc-runner-derive = "0.2.2"
